<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity">

    <EditText
        android:id="@+id/description"
        android:layout_width="4888dp"
        android:layout_height="48dp"
        android:hint="@string/description"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/description"
        android:hint="@string/date"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/make"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/date"
        android:hint="@string/make"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/model"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/make"
        android:hint="@string/model"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/serialNumber"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/model"
        android:hint="@string/serialNumber"
        android:inputType="number"/>

    <EditText
        android:id="@+id/estimatedValue"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/serialNumber"
        android:hint="@string/estValue"
        android:inputType="number"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_below="@id/estimatedValue"
        android:hint="@string/comment"
        android:inputType="textPersonName"/>


</RelativeLayout>