<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/caramel"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectkWords"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:background="@color/darkBrown"></TextView>

    <EditText
        android:id="@+id/filter_kwords_etext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Keywords"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textSize="25dp"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/separate"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginBottom="33dp">
    </TextView>

    <Button
        android:id="@+id/filter_kwords_donebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        android:textSize="25dp"
        android:backgroundTint="@color/green"
        android:layout_marginBottom="20dp"></Button>

</LinearLayout>