<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/selectMultipleitems"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/darkBrown"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/selectedItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectItems"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedItems"
            android:text="@string/selectAll"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/selectAll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginBottom="-4dp"
            android:layout_toEndOf="@id/selectAll"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/closebtn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close_selection_mode"
            android:src="@drawable/tag_cancel_fragment"
            android:backgroundTint="@color/green"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/deletebtn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_toStartOf="@id/closebtn"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@color/grey"
            android:contentDescription="@string/deleteSelectedItems"
            android:src="@drawable/trash_svgrepo_com"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            />

        <ImageButton
            android:id="@+id/multiple_set_tags_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="-2dp"
            android:layout_toStartOf="@id/deletebtn"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@color/grey"
            android:scaleType="fitCenter"
            android:src="@drawable/tags_svgrepo"
            android:visibility="invisible"/>


    </RelativeLayout>
    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50dp"
        android:background="@color/darkBrown"
        android:layout_below="@+id/selectMultipleitems"
        android:textAlignment="center">

    </TextView>
    
    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_below="@id/app_title">

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            />
        <View
            android:id="@+id/sort_spinner_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignEnd="@+id/sort_spinner"
            />

        <Spinner
            android:id="@+id/order_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/sort_spinner"
            android:layout_alignStart="@+id/sort_spinner_end"
            android:layout_weight="1"
            />

        <View
            android:id="@+id/order_spinner_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignEnd="@+id/order_spinner"
            />

        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignTop="@id/sort_spinner"
            android:layout_alignStart="@+id/order_spinner_end"
            android:entries="@array/filter_spinner_options"
            android:layout_weight="1"
            />
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/item_list"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/spinner_layout"
        >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@color/darkBrown"
            android:paddingVertical="15dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">
        </TextView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_item_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-2dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/add_item"
        android:focusable="true"
        android:src="@drawable/main_add_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/TEMP_add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_item"/>

</RelativeLayout>

